# Fillit

./: CMakeLists.txt  Makefile  faled_tests.txt  fillit.tar
clion/: CMakeLists.txt
den/: Makefile  dance_cage.c  dance_create.c  fillit.h  for_solver.c  main.c  solver.c
den/fillit/: Makefile  author  dance.h  dance_cage.c  fillit  fillit.h  increase.c  print_solution.c
den/libft/: Makefile
fillit/: .solver.c.swp  Makefile  dance.c  dance.h  dance_cage.c  dance_create.c  filling_list.c  fillit  fillit.h  free_funcs.c  free_manager.c  free_manager.h  increase.c  increase_list.c  increase_rows.c  knuth_solver.c  main.c  mkfig_arr.c  print_solution.c  solver.c  validation.c  vtest0
fillit/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_fib.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  (+35 more)
final/: Makefile  bad_options.c  dance.h  dance_create.c  filling_list.c  fillit  fillit.h  for_solver.c  free_funcs.c  free_manager.c  free_manager.h  knuth_solver.c  knuth_solver2.c  main.c  mkfig_arr.c  move_to_zero.c  solver.c  validation.c
increase/: for_solver.c  increase.c  increase_list.c  solver.c
libft/: ft_atoi.c
tests/: func_for_tests.h  funcs_for_tests.c  mkfigtest  mkfigtest2  mkfigtest3  mkfigtest4  nvtest0  nvtest3  sqrs  vtest1  vtest2
(+7 files in other folders)
